--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,124 @@ body {
 
 /* Layout */
 
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
 
+header {
+    display: flex;
+    justify-content: flex-end;
+    background-color: #080B12;
+    width: 100vw;
+    height: 100px;
+    position: relative;
+}
+
+nav {
+    background-color: #000000;
+    width: 50px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+main {
+    background-color: red;
+    height: calc(100vh - 100px);
+    overflow: auto;
+}
+
+footer {
+    background-color: #1C1C1C;
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    bottom: 0; 
+}
+
+.container-side {
+    display: flex;
+    height: calc(100vh - 100px);
+}
+
+.col-head {
+    display: flex;
+    align-items: center;
+    padding-right: 10px;
+}
+
+.col-side {
+    display: flex;
+    flex-direction: column;
+    margin: 10px auto;
+    text-align: center;
+}
+
+.col-side-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin: 10px auto;
+    text-align: center;
+}
+
+.col-foot {
+    width: calc(100% / 3 - 20px);
+    height: 70px;
+    background-color: blue;
+    border: 1px solid black;
+    margin: 13px auto;
+}
+
+.content-side {
+    padding-bottom: 10px;
+}
 
 /* Specs & Elements */
 
+button {
+    font-size: 12px;
+    color: white;
+    background-color: #080B12;
+    border: 1px solid white;
+    border-radius: 20px;
+    text-decoration: none;
+    text-align: center;
+    padding: 15px 45px;
+}
 
+.icon-1 {
+    width: 35px;
+}
+
+.icon-2 {
+    width: 30px;
+}
+
+.icon-3 {
+    width: 20px;
+}
 
 /* Utility */
 
+.bg-grey {
+    background-color: grey;
+}
 
+.radius-20 {
+    border-radius: 20px;
+}
 
 /* Media Query */
+@media screen and (mix-width: 576px) {
+
+}
+
+@media screen and (mix-width: 768px) {
+    
+}
+
+@media screen and (mix-width: 1200px) {
+    
+}
