--- a/css/style.css
+++ b/css/style.css
@@ -37,15 +37,6 @@ main {
     background-color: #141922;
 }
 
-footer {
-    background-color: #1C1C1C;
-    width: 100%;
-    height: 100px;
-    position: fixed;
-    bottom: 0; 
-    z-index: 1;
-}
-
 .container-side {
     display: flex;
     height: calc(100vh - 100px);
@@ -57,6 +48,15 @@ footer {
     position: relative;
     left: 50px;
     overflow: auto;
+}
+
+.container-foot {
+    background-color: #282828;
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    bottom: 0; 
+    z-index: 1;
 }
 
 .col-head {
@@ -101,9 +101,10 @@ footer {
 .col-foot {
     width: calc(100% / 3 - 20px);
     height: 70px;
-    background-color: blue;
-    border: 1px solid black;
     margin: 13px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .content-side {
@@ -113,6 +114,16 @@ footer {
 .content-main {
     display: flex;
     justify-content: center;
+}
+
+.content-foot-col {
+    display: flex;
+    flex-direction: column;
+    margin-right: 10px;
+}
+
+.content-foot-row {
+    display: flex;
 }
 
 /* Specs & Elements */
@@ -154,12 +165,22 @@ li {
     padding: 10px;
 }
 
-hr {
+.hr-g {
     position: absolute;
     width: 30px;
     border: 1px solid #99E12D;
     top: 30px;
     left: 40px;
+}
+
+.hr-grey-1 {
+    width: 20px;
+    border: 2px solid #C1C1C1;
+}
+
+.hr-grey-2 {
+    width: 50px;
+    border: 2px solid #5A5A5A;
 }
 
 h2 {
@@ -181,11 +202,31 @@ h6 {
     width: 190px;
 }
 
+.content-foot-col > img {
+    width: 40px;
+}
+
 .round {
     height: 190px;
     width: 190px;
     border-radius: 50%;
     object-fit: cover;
+}
+
+.fa-shuffle,
+.fa-backward-step,
+.fa-circle-play,
+.fa-forward-step,
+.fa-rotate-right,
+.fa-bars,
+.fa-display,
+.fa-volume-high {
+    color: white;
+}
+
+.fa-heart,
+.fa-folder {
+    color: grey;
 }
 
 /* Utility */
@@ -196,6 +237,18 @@ h6 {
 
 .radius-20 {
     border-radius: 20px;
+}
+
+.color-white {
+    color: white;
+}
+
+.color-grey {
+    color: grey;
+}
+
+.font-size-11 {
+    font-size: 11px;
 }
 
 /* Media Query */
