--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,8 @@ main {
 
 .content-foot-row {
     display: flex;
+    gap: 22px;
+    position: relative;
 }
 
 /* Specs & Elements */
@@ -176,6 +178,7 @@ li {
 .hr-grey-1 {
     width: 20px;
     border: 2px solid #C1C1C1;
+    margin-left: 5px;
 }
 
 .hr-grey-2 {
@@ -227,6 +230,12 @@ h6 {
 .fa-heart,
 .fa-folder {
     color: grey;
+}
+
+.fa-circle-play {
+    position: absolute;
+    bottom: -5px;
+    left: 55px;
 }
 
 /* Utility */
